Minor Sonar fixes